--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -36,6 +36,13 @@ spec:
             secretKeyRef:
               name: gitlab-secret
               key: redis-password
+        resources:
+            requests:
+              cpu: {{ .Values.resources.requests.cpu }}
+              memory: {{ .Values.resources.requests.memory }}
+            limits:
+              cpu: {{ .Values.resources.limits.cpu }}
+              memory: {{ .Values.resources.limits.memory }}
 ---
 apiVersion: v1
 kind: Service
