--- a/templates/postgresql-deployment.yaml
+++ b/templates/postgresql-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: postgresql
-        image: bitnami/postgresql:latest
+        image: "bitnami/postgresql:latest"
         env:
         - name: POSTGRESQL_PASSWORD
           valueFrom:
@@ -23,9 +23,9 @@ spec:
               name: gitlab-secret
               key: postgres-password
         - name: POSTGRESQL_USERNAME
-          value: {{ .Values.postgresql.postgresqlUsername }}
+          value: "{{ .Values.postgresql.postgresqlUsername }}"
         - name: POSTGRESQL_DATABASE
-          value: {{ .Values.postgresql.postgresqlDatabase }}
+          value: "{{ .Values.postgresql.postgresqlDatabase }}"
         ports:
         - containerPort: 5432
 ---
@@ -33,7 +33,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gitlab-postgresql
-  namespace: gitlab
 spec:
   type: ClusterIP
   ports:
