--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -36,9 +36,14 @@ spec:
             secretKeyRef:
               name: gitlab-secret
               key: redis-password
+        - name: REDIS_URL
+          value: redis://{{ .Values.redis.external.host }}:{{ .Values.redis.external.port }}
+        - name: REDIS_PORT
+          value: "{{ .Values.redis.external.port }}"
         envFrom:
         - secretRef:
             name: gitlab-secret
+
 ---
 apiVersion: v1
 kind: Service
